--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "plant-md",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "engines": {
+    "node": "^14.18.0",
+    "npm": "^ v6.14.0"
+  },
   "scripts": {
-    "pug": "pug",
+    "run": "run-p run:**",
+    "run:cms": "npx netlify-cms-proxy-server",
+    "run:build": "npx @11ty/eleventy --passthroughall --watch",
+    "run:serve": "npx http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,13 +23,14 @@
     "url": "https://github.com/bever1337/plant-md/issues"
   },
   "homepage": "https://github.com/bever1337/plant-md#readme",
+  "dependencies": {},
   "devDependencies": {
-    "body-parser": "^1.19.2",
-    "express": "^4.17.3",
-    "express-http-proxy": "^1.6.3",
+    "@11ty/eleventy": "^1.0.0",
+    "http-server": "^14.1.0",
     "markdown-it": "^12.3.2",
-    "markdown-it-front-matter": "^0.2.3",
-    "pug": "^3.0.2",
-    "pug-cli": "^1.0.0-alpha6"
+    "markdown-it-anchor": "^8.4.1",
+    "markdown-it-table-of-contents": "^0.6.0",
+    "netlify-cms-proxy-server": "^1.3.23",
+    "npm-run-all": "^4.1.5"
   }
 }
